landing-zone/hub-networking/06-jumpbox.tf
resource "azurerm_network_interface" "jumpbox" {
  name                = "server-dev-linux-nic"
  location            = var.location
  resource_group_name = azurerm_resource_group.rg.name
  enable_accelerated_networking = true
   tags = var.tags

  ip_configuration {
    name                          = "internal"
    subnet_id                     = azurerm_subnet.dev.id
    private_ip_address_allocation = "Dynamic"
  }

}

resource "azurerm_virtual_machine" "jumpbox" {
  name                  = "server-dev-linux"
  location              = var.location
  resource_group_name   = azurerm_resource_group.rg.name
  network_interface_ids = [azurerm_network_interface.jumpbox.id]
  vm_size               = "Standard_DS3_v2"

  # Uncomment this line to delete the OS disk automatically when deleting the VM
  delete_os_disk_on_termination = true

  # Uncomment this line to delete the data disks automatically when deleting the VM
  delete_data_disks_on_termination = true

  storage_image_reference {
    publisher = "Canonical"
    offer     = "0001-com-ubuntu-server-jammy"
    sku       = "22_04-lts"
    version   = "latest"
  }
  storage_os_disk {
    name              = "myosdisk1"
    caching           = "ReadWrite"
    create_option     = "FromImage"
    managed_disk_type = "Standard_LRS"
  }
  os_profile {
    computer_name  = "jumpbox"
    admin_username = "ihsen"
    admin_password = "ihsenAlaya@2024"
  }
  os_profile_linux_config {
    disable_password_authentication = false
  }
  tags = var.tags
}
